--- a/index.html
+++ b/index.html
@@ -3,6 +3,11 @@
   <head>
     <meta charset="utf-8">
     <title>Pig Dice</title>
+    <link rel="stylesheet" href="css/normalize.css">
+    <link rel="stylesheet" href="css/skeleton.css">
+    <link rel="stylesheet" href="css/styles.css">
+    <script src="jquery-1.12.0.js"></script>
+    <script src="scripts/scripts.js"></script>
   </head>
   <body>
 
