Add html to add game buttons

--- a/index.html
+++ b/index.html
@@ -10,6 +10,28 @@
     <script src="scripts/scripts.js"></script>
   </head>
   <body>
+    <div class="container">
+      <p>Welcome to Pig Dice!</p>
+      <p>It is Player <span class="playerturn"></span> turn</p>
+
+      <div class="firstroll">
+        <p>Click the button to roll</p>
+        <button type="submit" name="roll" id="roll1">ROLL</button>
+      </div>
+
+      <div class="nextroll">
+        <p>Would you like to roll or hold</p>
+        <button type="submit" name="roll" id="roll2">ROLL</button>
+        <button type="submit" name="roll" id="hold">HOLD</button>
+      </div>
+
+      <div class="points">
+        <p>Player 1's points: <span class="player1score"></span>
+        <p>Player 2's points: <span class="player2score"></span>
+      </div>
+
+    </div>
+
 
   </body>
 </html>
