Change html to include game buttons and scoring

--- a/index.html
+++ b/index.html
@@ -25,13 +25,34 @@
 
             </div>
 
-            <div class="rollorhold">
-              <p>It is Player <span class="playerturn"></span> turn</p>
-              <p>Would you like to roll or hold</p>
+          <div class="row">
+
+            <div class="player1 six columns">
+              <p>Player 1 </p>
               <button type="button" name="button" id="hold">Hold</button>
               <button type="button" name="button" id="roll">Roll</button>
-
             </div>
+
+            <div class="player2 six columns">
+              <p>Player 2 </p>
+              <button type="button" name="button" id="hold">Hold</button>
+              <button type="button" name="button" id="roll">Roll</button>
+            </div>
+
+          </div>
+
+          <div class="row">
+
+            <div class="scoring six columns">
+              <p>Player 1 Total Score: <span class="player1score"></span></p>
+              <p>Player 2 Total Score: <span class="player2score"></span></p>
+              <p>Dice Roll Number <span class="randomnumber"></span></p>
+              <p>Current Turn Score <span class="turnscore"></span></p>
+            </div>
+
+          </div>
+
+
           </div>
 
         </form>
