Add switchturn, scorekeeper, and diceroll

--- a/index.html
+++ b/index.html
@@ -15,28 +15,26 @@
       <div class="Players">
         <form class="game" action="index.html" method="post">
           <div class="row">
-            <div class="playersinfo">
-              <label for="player1" class="twelve.columns">Player 1 Name:</label>
-              <input type="text" name="name" id="player1name" class="twelve columns">
-              <label for="players" class="twelve columns">Player 2 Name:</label>
-              <input type="text" name="name" id="player2name" class="twelve columns">
+            <div class="playgame">
 
-              <input type="submit" name="name" value="Submit Names" id="submit">
+              <input type="submit" name="name" value="Play Game!" id="submit">
 
             </div>
+
+        <div class="gameboard">
 
           <div class="row">
 
             <div class="player1 six columns">
               <p>Player 1 </p>
-              <button type="button" name="button" id="hold">Hold</button>
-              <button type="button" name="button" id="roll">Roll</button>
+              <button type="button" name="button" id="hold1">Hold</button>
+              <button type="button" name="button" id="roll1">Roll</button>
             </div>
 
             <div class="player2 six columns">
               <p>Player 2 </p>
-              <button type="button" name="button" id="hold">Hold</button>
-              <button type="button" name="button" id="roll">Roll</button>
+              <button type="button" name="button" id="hold2">Hold</button>
+              <button type="button" name="button" id="roll2">Roll</button>
             </div>
 
           </div>
@@ -51,6 +49,8 @@
             </div>
 
           </div>
+
+        </div>
 
 
           </div>
