It worksgit add .

--- a/index.html
+++ b/index.html
@@ -25,13 +25,13 @@
 
           <div class="row">
 
-            <div class="player1 six columns">
+            <div class="player1 three columns">
               <p>Player 1 </p>
               <button type="button" name="button" id="hold1">Hold</button>
               <button type="button" name="button" id="roll1">Roll</button>
             </div>
 
-            <div class="player2 six columns">
+            <div class="player2 three columns">
               <p>Player 2 </p>
               <button type="button" name="button" id="hold2">Hold</button>
               <button type="button" name="button" id="roll2">Roll</button>
@@ -42,10 +42,17 @@
           <div class="row">
 
             <div class="scoring six columns">
-              <p>Player 1 Total Score: <span class="player1score"></span></p>
-              <p>Player 2 Total Score: <span class="player2score"></span></p>
-              <p>Dice Roll Number <span class="randomnumber"></span></p>
-              <p>Current Turn Score <span class="turnscore"></span></p>
+              <div class="row">
+                <div class="six columns">
+                  <p >Player 1 Total Score: <span class="player1score"></span></p>
+                </div>
+                <div class="six columns">
+                  <p >Player 2 Total Score: <span class="player2score"></span></p>
+                </div>
+
+                <p>Dice Roll Number <span class="randomnumber"></span></p>
+                <p>Current Turn Score <span class="turnscore"></span></p>
+            </div>
             </div>
 
           </div>
